--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   margin: 0;
   box-sizing: border-box;
 }
+/* text-secelction color */
 ::selection{
   background-color: #8509cd;
   color: #ffffff;
@@ -30,20 +31,37 @@ body {
   background-attachment: fixed;
   background-position: center;
 }
-.nav > a{
-    content: "";
-    position:absolute;
-    height: 3px;
-    background-color: rgb(195,29, 29);
-    width: 0;
-    left: 0;
-    bottom: -10px;
-    transition: 0.5s ;
+
+/* IMPROVED NAVBAR UNDERLINE ANIMATION */
+.nav li a {
+  position: relative;
+  display: inline-block;
+  padding-bottom: 2px;
+  transition: color 0.3s;
 }
-.nav > a:hover:after{
-    /* transform: scaleX(1); */
-    width: 100%;
+
+.nav li a::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 0%;
+  height: 2px;
+  background: #60a5fa; /* Tailwind blue-400 */
+  border-radius: 2px;
+  transition: width 0.3s cubic-bezier(.4,0,.2,1);
 }
+
+.nav li a:hover,
+.nav li a:focus {
+  color: #60a5fa;
+}
+
+.nav li a:hover::after,
+.nav li a:focus::after {
+  width: 100%;
+}
+
 .monochrome {
   filter: grayscale(100%); /* converts element to black & white */ 
 }
@@ -62,15 +80,16 @@ nav.fill ul li a:after {
   width: 0%;
   content: '.';
   color: transparent;
-  background: #aaa;
-  height: 1px;
+  background: #f0eaea;
+  height: 3px;
+  border-radius: 0;
 }
 nav.stroke ul li a:hover:after {
   width: 100%;
 }
 
 nav.fill ul li a {
-  transition: all 2s;
+  transition: all 100s;
 }
 
 nav.fill ul li a:after {
@@ -85,9 +104,9 @@ nav.fill ul li a:hover {
 }
 nav.fill ul li a:hover:after {
   z-index: -10;
-  animation: fill 2s forwards;
-  -webkit-animation: fill 2s forwards;
-  -moz-animation: fill 2s forwards;
+  animation: fill 5s forwards;
+  -webkit-animation: fill 5s forwards;
+  -moz-animation: fill 5s forwards;
   opacity: 1;
 }
 
